dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([dbixx], [0.0.3], [artyomtnk@yahoo.com])

AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CXX
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_LANG_CPLUSPLUS
AC_CONFIG_FILES([Makefile])
AC_CHECK_LIB(dbi,main,[],[echo "DBI library not installed" ; exit -1])
AC_OUTPUT
